bk/client-deployment-bk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"client-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"component":"web"}},"template":{"metadata":{"labels":{"component":"web"}},"spec":{"containers":[{"image":"ubosquet/client:3.0","name":"client","ports":[{"containerPort":3000}]}]}}}}
  creationTimestamp: "2022-09-07T13:54:56Z"
  generation: 1
  name: client-deployment
  namespace: default
  resourceVersion: "6014053"
  uid: 9b0a5b57-c194-4f6a-bb96-2ad9f8114aae
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      component: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: web
    spec:
      containers:
      - image: ubosquet/client:3.0
        imagePullPolicy: IfNotPresent
        name: client
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-09-07T13:54:56Z"
    lastUpdateTime: "2022-09-07T13:55:00Z"
    message: ReplicaSet "client-deployment-865444755d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-09-20T02:36:29Z"
    lastUpdateTime: "2022-09-20T02:36:29Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
