bk/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"postgres-cluster-ip-service","namespace":"default"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"component":"postgres"},"type":"ClusterIP"}}
  creationTimestamp: "2022-09-06T20:15:55Z"
  name: postgres-cluster-ip-service
  namespace: default
  resourceVersion: "1258774"
  uid: ecf20234-058a-43f0-949d-65c5f75273fb
spec:
  clusterIP: 172.20.111.177
  clusterIPs:
  - 172.20.111.177
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    component: postgres
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
