bk/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"redis-cluster-ip-service","namespace":"default"},"spec":{"ports":[{"port":6379,"targetPort":6379}],"selector":{"component":"redis"},"type":"ClusterIP"}}
  creationTimestamp: "2022-09-06T20:15:29Z"
  name: redis-cluster-ip-service
  namespace: default
  resourceVersion: "1288867"
  uid: 344b99f5-a473-4a81-9249-827308654b12
spec:
  clusterIP: 172.20.61.23
  clusterIPs:
  - 172.20.61.23
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    component: redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
