bk/server-deployment-bk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"server-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"component":"server"}},"template":{"metadata":{"labels":{"component":"server"}},"spec":{"containers":[{"env":[{"name":"REDIS_HOST","value":"redis-cluster-ip-service"},{"name":"REDIS_PORT","value":"6379"},{"name":"PGUSER","value":"postgres"},{"name":"PGHOST","value":"postgres-cluster-ip-service"},{"name":"PGPORT","value":" [...]
  creationTimestamp: "2022-09-06T19:01:12Z"
  generation: 1
  name: server-deployment
  namespace: default
  resourceVersion: "6014015"
  uid: 580c8884-2deb-4999-b61f-8fa6a45d011c
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      component: server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: server
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          value: redis-cluster-ip-service
        - name: REDIS_PORT
          value: "6379"
        - name: PGUSER
          value: postgres
        - name: PGHOST
          value: postgres-cluster-ip-service
        - name: PGPORT
          value: "5432"
        - name: PGDATABASE
          value: postgres
        - name: PGPASSWORD
          value: admin
        image: ubosquet/server:1.0
        imagePullPolicy: IfNotPresent
        name: server
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-09-06T19:01:12Z"
    lastUpdateTime: "2022-09-06T19:01:28Z"
    message: ReplicaSet "server-deployment-75d7bd7c5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-09-20T02:36:28Z"
    lastUpdateTime: "2022-09-20T02:36:28Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
