bk/worker-deployment-bk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"worker-deployment","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"component":"worker"}},"template":{"metadata":{"labels":{"component":"worker"}},"spec":{"containers":[{"env":[{"name":"REDIS_HOST","value":"redis-cluster-ip-service"},{"name":"REDIS_PORT","value":"6379"}],"image":"ubosquet/worker:1.0","name":"worker"}]}}}}
  creationTimestamp: "2022-09-07T02:56:59Z"
  generation: 1
  name: worker-deployment
  namespace: default
  resourceVersion: "6013972"
  uid: 804de6ee-51e1-44fb-8431-9e6d6d4996f1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      component: worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: worker
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          value: redis-cluster-ip-service
        - name: REDIS_PORT
          value: "6379"
        image: ubosquet/worker:1.0
        imagePullPolicy: IfNotPresent
        name: worker
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-09-07T02:56:59Z"
    lastUpdateTime: "2022-09-07T02:57:07Z"
    message: ReplicaSet "worker-deployment-556f895659" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-09-20T02:36:25Z"
    lastUpdateTime: "2022-09-20T02:36:25Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
